Fix configuration link not always visible in themes list

--- a/admin/theme/src/scss/style.scss
+++ b/admin/theme/src/scss/style.scss
@@ -134,7 +134,7 @@ section[role='content'] {
         display: inline-block;
         text-align: center;
         width: 180px;
-        height: 192px;
+        height: 222px;
         background-color: #eee;
         margin: 5px;
         border-radius: 5px;
